docs/api/qiskit/0.24/qiskit.circuit.Delay.mdx
---
title: Delay
description: API reference for qiskit.circuit.Delay
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.Delay
---

<span id="qiskit-circuit-delay" />

# qiskit.circuit.Delay

<Class id="qiskit.circuit.Delay" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/circuit/delay.py" signature="Delay(duration, unit='dt')" modifiers="class">
  Do nothing and just delay/wait/idle for a specified duration.

  Create new delay instruction.

  ### \_\_init\_\_

  <Function id="qiskit.circuit.Delay.__init__" signature="__init__(duration, unit='dt')">
    Create new delay instruction.
  </Function>

  ## Methods

  |                                                                                                                             |                                                                          |
  | --------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.circuit.Delay.__init__ "qiskit.circuit.Delay.__init__")(duration\[, unit])                             | Create new delay instruction.                                            |
  | [`add_decomposition`](#qiskit.circuit.Delay.add_decomposition "qiskit.circuit.Delay.add_decomposition")(decomposition)      | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.circuit.Delay.assemble "qiskit.circuit.Delay.assemble")()                                              | Assemble a QasmQobjInstruction                                           |
  | [`broadcast_arguments`](#qiskit.circuit.Delay.broadcast_arguments "qiskit.circuit.Delay.broadcast_arguments")(qargs, cargs) | Validation of the arguments.                                             |
  | [`c_if`](#qiskit.circuit.Delay.c_if "qiskit.circuit.Delay.c_if")(classical, val)                                            | Add classical condition on register classical and value val.             |
  | [`copy`](#qiskit.circuit.Delay.copy "qiskit.circuit.Delay.copy")(\[name])                                                   | Copy of the instruction.                                                 |
  | [`inverse`](#qiskit.circuit.Delay.inverse "qiskit.circuit.Delay.inverse")()                                                 | Special case.                                                            |
  | [`is_parameterized`](#qiskit.circuit.Delay.is_parameterized "qiskit.circuit.Delay.is_parameterized")()                      | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.circuit.Delay.mirror "qiskit.circuit.Delay.mirror")()                                                    | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`qasm`](#qiskit.circuit.Delay.qasm "qiskit.circuit.Delay.qasm")()                                                          | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.circuit.Delay.repeat "qiskit.circuit.Delay.repeat")(n)                                                   | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.circuit.Delay.reverse_ops "qiskit.circuit.Delay.reverse_ops")()                                     | For a composite instruction, reverse the order of sub-instructions.      |
  | [`to_matrix`](#qiskit.circuit.Delay.to_matrix "qiskit.circuit.Delay.to_matrix")()                                           | Return the identity matrix.                                              |
  | [`validate_parameter`](#qiskit.circuit.Delay.validate_parameter "qiskit.circuit.Delay.validate_parameter")(parameter)       | Instruction parameters has no validation or normalization.               |

  ## Attributes

  |                                                                                                |                                                                               |
  | ---------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------- |
  | [`decompositions`](#qiskit.circuit.Delay.decompositions "qiskit.circuit.Delay.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.circuit.Delay.definition "qiskit.circuit.Delay.definition")             | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.circuit.Delay.duration "qiskit.circuit.Delay.duration")                   | Get the duration of this delay.                                               |
  | [`params`](#qiskit.circuit.Delay.params "qiskit.circuit.Delay.params")                         | return instruction params.                                                    |
  | [`unit`](#qiskit.circuit.Delay.unit "qiskit.circuit.Delay.unit")                               | Get the time unit of duration.                                                |

  ## Members list

  ### add\_decomposition

  <Function id="qiskit.circuit.Delay.add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.circuit.Delay.assemble" signature="assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.circuit.Delay.broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.circuit.Delay.c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### copy

  <Function id="qiskit.circuit.Delay.copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### decompositions

  <Attribute id="qiskit.circuit.Delay.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.Delay.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.Delay.duration">
    Get the duration of this delay.
  </Attribute>

  ### inverse

  <Function id="qiskit.circuit.Delay.inverse" signature="inverse()">
    Special case. Return self.
  </Function>

  ### is\_parameterized

  <Function id="qiskit.circuit.Delay.is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### mirror

  <Function id="qiskit.circuit.Delay.mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### params

  <Attribute id="qiskit.circuit.Delay.params">
    return instruction params.
  </Attribute>

  ### qasm

  <Function id="qiskit.circuit.Delay.qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.circuit.Delay.repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.circuit.Delay.reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### to\_matrix

  <Function id="qiskit.circuit.Delay.to_matrix" signature="to_matrix()">
    Return the identity matrix.

    **Return type**

    `ndarray`
  </Function>

  ### unit

  <Attribute id="qiskit.circuit.Delay.unit">
    Get the time unit of duration.
  </Attribute>

  ### validate\_parameter

  <Function id="qiskit.circuit.Delay.validate_parameter" signature="validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>
</Class>

